--- a/index.html
+++ b/index.html
@@ -3,57 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fahrzeugaufbereitung Auswahl</title>
+    <title>Auswahl Standort</title>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        html, body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
             background-color: #f4f4f9;
+        }
+        body {
+            font-family: 'Segoe UI', Arial, sans-serif;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            padding: 10px;
+            min-height: 100dvh; /* Dynamic viewport height for mobile */
+            padding: 20px;
+            box-sizing: border-box;
         }
         h1 { 
             color: #333; 
-            margin-bottom: 30px; 
-            text-align: center; 
+            margin-bottom: 40px; 
+            text-align: center;
+            font-size: 1.5rem;
         }
         .container {
             display: flex;
+            flex-direction: column;
             gap: 20px;
-            flex-direction: column; /* Better for mobile stacking */
-            align-items: center;
             width: 100%;
+            max-width: 320px;
         }
         .btn {
-            /* This section centers the text */
             display: flex;
             justify-content: center;
             align-items: center;
             text-align: center;
-            
-            padding: 25px 20px;
+            padding: 20px;
+            min-height: 70px;
             font-size: 1.2rem;
             font-weight: bold;
             text-decoration: none;
-            color: white;
+            color: white !important;
             border-radius: 12px;
-            transition: transform 0.2s, background-color 0.2s;
-            width: 100%;
-            max-width: 300px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             box-sizing: border-box;
         }
-        /* Audi Zentrum Color */
         .audi { background-color: #333333; }
-        .audi:hover { background-color: #000000; transform: scale(1.05); }
-        
-        /* Held & Ströhle Color */
         .held { background-color: #004a99; }
-        .held:hover { background-color: #003366; transform: scale(1.05); }
     </style>
 </head>
 <body>
