--- a/index.html
+++ b/index.html
@@ -3,54 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auswahl Standort</title>
+    <title>Fahrzeugaufbereitung Auswahl</title>
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            background-color: #f4f4f9;
-        }
         body {
-            font-family: 'Segoe UI', Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f4f9;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            min-height: 100dvh; /* Dynamic viewport height for mobile */
-            padding: 20px;
-            box-sizing: border-box;
+            height: 100vh;
+            margin: 0;
         }
-        h1 { 
-            color: #333; 
-            margin-bottom: 40px; 
-            text-align: center;
-            font-size: 1.5rem;
-        }
+        h1 { color: #333; margin-bottom: 30px; }
         .container {
             display: flex;
-            flex-direction: column;
             gap: 20px;
-            width: 100%;
-            max-width: 320px;
+            flex-wrap: wrap;
+            justify-content: center;
         }
         .btn {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            padding: 20px;
-            min-height: 70px;
+            padding: 25px 50px;
             font-size: 1.2rem;
             font-weight: bold;
             text-decoration: none;
-            color: white !important;
+            color: white;
             border-radius: 12px;
+            transition: transform 0.2s, background-color 0.2s;
+            text-align: center;
+            min-width: 250px;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            box-sizing: border-box;
         }
+        /* Audi Zentrum Color */
         .audi { background-color: #333333; }
+        .audi:hover { background-color: #000000; transform: scale(1.05); }
+        
+        /* Held & Ströhle Color */
         .held { background-color: #004a99; }
+        .held:hover { background-color: #003366; transform: scale(1.05); }
     </style>
 </head>
 <body>
